--- a/index.html
+++ b/index.html
@@ -5,15 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Etch A Sketch</title>
-    <link  rel="stylesheet "href="styles.css">
+    <link  rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Atma&display=swap" rel="stylesheet">
     <script src="script.js" defer></script>
 </head>
 <body>
 
-<div class="container"></div>
-<button class="colors" id="white">ERASER</button>
-<button class="colors" id="black">BLACK</button>
-<button class="colors" id="rainbow">RAINDBOW MODE</button>
-    
+<div class="main-container">
+   <div class="wrapper">
+       <div class="title-container">
+            <p class="title">Etch-a-Sketch</p>
+            <p class="title2">SKETCH WHAT'S ON YOUR MIND</p>
+       </div>
+       <div class="middle-wrapper">
+           <div class="button-wrapper">
+                <input type="color" name="color" id="color-picker" value="#000000">
+                <button class="colors" id="black">Black</button>
+                <button class="colors" id="white">Eraser</button>
+                <button class="colors" id="rainbow">Rainbow mode</button>
+                <button class="colors" id="reset">Clear</button>
+           </div>
+        <div class="container"></div>
+       </div>
+       <div class="color-picker-wrapper">
+            <p id="range-number">16x16</p>
+            <input type="range" class="slider" min="1" max="64" value="16" id="value-slider">
+       </div>
+       <p class="credits">Copyright © 2022 SaintClair239</p>
+   </div> 
+</div>
 </body>
 </html>
