--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
        <div class="middle-wrapper">
            <div class="button-wrapper">
                 <input type="color" name="color" id="color-picker" value="#000000">
-                <button class="colors" id="black">Black</button>
-                <button class="colors" id="white">Eraser</button>
-                <button class="colors" id="rainbow">Rainbow mode</button>
+                <button class="colors black">Black</button>
+                <button class="colors white">Eraser</button>
+                <button class="colors rainbow">Rainbow mode</button>
                 <button class="colors" id="reset">Clear</button>
            </div>
         <div class="container"></div>
